--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,7 +31,7 @@ body {
   top: 0;
   width: 100%;
   transition: background-color 0.3s ease, top 0.3s ease;
-  z-index: 10;
+  z-index: 1000;
   background-color: transparent; /* Default transparent */
 }
 
@@ -315,6 +315,8 @@ body {
 
 .avatar {
   animation: float 6s ease-in-out infinite;
+  position: relative;
+  z-index: 1;
 }
 
 @keyframes float {
